# jiji

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  package.json
.github/workflows/: release-macos.yml
crates/jiji-core/: Cargo.toml
crates/jiji-core/examples/: snapshot.rs
crates/jiji-core/src/: backend.rs  jj.rs  lib.rs  merge_tool.rs  mock.rs  settings.rs  snapshot.rs  watch.rs
crates/jiji-forge/: Cargo.toml
crates/jiji-forge/examples/: forge.rs
crates/jiji-forge/src/: auth.rs  autoland.rs  ci.rs  comment.rs  error.rs  github.rs  land.rs  lib.rs  pr.rs  reconcile.rs  remote.rs  ship.rs  submit.rs  template.rs
scripts/: release-preflight  visual-harness
scripts/harness/: harness.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: autoland.rs  commands.rs  forge.rs  lib.rs  main.rs
src/lib/: api.ts  motion.ts  time.ts  update.ts
src/lib/bindings/: AutoLandMerged.ts  AutoLandPhase.ts  AutoLandRecord.ts  AutoLandState.ts  AutoLandStatus.ts  BookmarkState.ts  ChangeDetail.ts  ChangeDiff.ts  ChangedFile.ts  ChecksRollup.ts  CiRerunReport.ts  ConflictItem.ts  ConflictKind.ts  DiffHunk.ts  DiffLine.ts  DiffLineKind.ts  DiffSegment.ts  FileDiff.ts  FileDiffContent.ts  FileStatus.ts  ForgeAuth.ts  ForgeCapabilities.ts  ForgeProvider.ts  ForgeRepo.ts  ForgeStatus.ts  GitRemote.ts  GraphNode.ts  LandAction.ts  LandBlocker.ts  LandOutcome.ts  LandPlan.ts  LandSegment.ts  LandSegmentStatus.ts  LandStep.ts  MergeMethod.ts  MutationOutcome.ts  NodeKind.ts  OpEffect.ts  OpEffectKind.ts  OperationItem.ts  (+22 more)
src/lib/components/conflicts/: ConflictRow.svelte  ConflictsView.svelte  conflicts.test.ts  conflicts.ts
src/lib/components/diff/: ChangeHeader.svelte  DiffView.svelte  FileDiffCard.svelte  diff.test.ts  diff.ts  highlight.test.ts  highlight.ts  split.test.ts  split.ts
src/lib/components/graph/: DragOverlay.svelte  ElisionRow.svelte  FocusView.svelte  GraphRow.svelte  GraphView.svelte  SiblingLane.svelte  dnd.svelte.ts  dnd.test.ts  dnd.ts  graph.test.ts  graph.ts  preview.svelte.ts
src/lib/components/inspector/: inspect.test.ts  inspect.ts
src/lib/components/ops/: OperationRow.svelte  OperationsView.svelte  ops.test.ts  ops.ts
src/lib/components/palette/: CommandPalette.svelte  palette.test.ts  palette.ts
src/lib/components/publish/: PublishView.svelte  autoland.test.ts  autoland.ts  land.test.ts  land.ts  pr.test.ts  pr.ts  review.test.ts  review.ts  ship.test.ts  ship.ts  submit.test.ts  submit.ts
src/lib/components/shell/: AppShell.svelte  LicenseBadge.svelte  Sidebar.svelte  SplitPane.svelte  StatusBar.svelte  ThemeMenu.svelte  TopBar.svelte  upstream.test.ts  upstream.ts
src/lib/components/ui/: Button.svelte  EmptyState.svelte  Icon.svelte  SectionHeader.svelte  icons.ts
src/lib/components/views/: Inspector.svelte  PlaceholderView.svelte  WelcomeView.svelte  WorkbenchView.svelte
src/lib/license/: api.ts  config.ts  persist.ts  state.svelte.ts
src/lib/state/: actions.ts  app.svelte.ts  autoland.svelte.ts  forge.svelte.ts  recent.ts  theme.svelte.ts  upstream.svelte.ts
src/lib/styles/: global.css  tokens.css
src/lib/types/: tinykeys.d.ts
src/routes/: +layout.svelte  +page.svelte
