[package]
name = "jiji"
version.workspace = true
description = "A JJ-native desktop workbench for local repo history, diffs, and mutations."
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jiji_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
jiji-core = { path = "../crates/jiji-core" }
jiji-forge = { path = "../crates/jiji-forge" }
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-log.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-process.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-store.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater.workspace = true
