[package]
name = "jiji-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
jj-lib.workspace = true
notify.workspace = true
pollster.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
ts-rs.workspace = true
whoami.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
