[package]
name = "jiji-forge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
ts-rs.workspace = true
url.workspace = true

[dev-dependencies]
insta.workspace = true
