[package]
name = "jiji-forge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
jiji-core = { path = "../jiji-core" }
keyring.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
ts-rs.workspace = true
url.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
